# lingmo-fm

./: CMakeLists.txt  application.cpp  com.lingmo.FileManager.xml
.github/workflows/: build.yml  package.yml
debian/: changelog  control  copyright
dragdrop/: CMakeLists.txt
filemanager/: CMakeLists.txt
filemanager/helper/: filelauncher.cpp
filemanager/model/: foldermodel.cpp  foldermodel.h
rpm/: lingmo-fm.spec
